# RAMF

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
RAMF/: CMakeLists.txt
RAMF/source/: RAMF_main.cpp  SimuManager.cpp  dev progress.txt  performanceTest.cpp
RAMF/source/Actor/: Actor.cpp  ExtraAngVel.h  Jumping.cpp  Jumping.h  MassCenterAndVswim.cpp  MassCenterAndVswim.h  VswimActor.cpp  VswimActor.h
RAMF/source/Agent/: Agent.cpp  InertialessSwimmer.cpp  InertialessSwimmer.h  PointParticle.cpp  PointParticle.h
RAMF/source/Environment/: Environment.cpp  FlowFieldDataPool.cpp  FlowFieldDataPool.h  Geometry.cpp  Geometry.h  HomoIsoTurb.cpp  HomoIsoTurb.h  Interpolation.cpp  Interpolation.h  LoadedFlow.cpp  LoadedFlow.h  Mesh.cpp  Quiescent.cpp  Quiescent.h  Scalar.cpp  Scalar.h  TaylorGreenVortex.cpp  TaylorGreenVortex.h
RAMF/source/MachineLearning/: DDQL.cpp  DDQL.h  MachineLearning.cpp  Memory.cpp  QLearning.cpp  QLearning.h
RAMF/source/Sensor/: PositionSensor.cpp  PositionSensor.h  Sensor.cpp  SensorsImpl.cpp  SensorsImpl.h
RAMF/source/Task/: DistanceFromBoundary.cpp  DistanceFromBoundary.h  NavigationPoint.cpp  NavigationPoint.h  NavigationUpward.cpp  NavigationUpward.h  Task.cpp
RAMF/source/include/: Actor.h  Agent.h  AgentInterface.h  Config.h  Environment.h  EnvironmentInterface.h  Fop.h  MachineLearning.h  MatrixOp.h  Memory.h  Random.h  Sensor.h  SimuManager.h  Task.h  TaskInterface.h  TorchAPI.h  pch.h  performanceTest.h  vectypedef.h
RAMF/source/other/: Config.cpp  Fop.cpp  Random.cpp
